Ich komme richtig schlecht voran DiceTool :(

--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -147,7 +147,8 @@ Viel Logik hat dieses Fragment nicht zu bieten, denn es dient lediglich als Eing
 \subsubsection{GearFragment.kt}
 
 \subsection{Würfeltool}
-
+Das Würfeltool stellt einen abgegrenzten Teil unserer Applikation dar. Es wird durch das Hauptmenü(\textit{MAIN\_NAVIGATION\_DRAWER}) aufgerufen. Wir haben uns auch hier für ein Fragment entschieden, da wir dieses gut in das bestehende System aus \textit{AppBarLayout} und \textit{NavigationView} einbinden konnten. Wir legten zunächst die Klasse \textit{DiceController} an. Diese erbt von Fragment und bildet damit die Hauptkomponente des Würfeltools. Da neben der Hauptansicht zusätzlich noch 2 Dialoge benötigt werden erstellten wir 3 Layout-Dateien(\textit{fragment\_dice.xml}, \textit{dice\_result\_display\_dialog.xml}, \textit{dice\_roll\_history.xml}). Um das Fragment strukturiert zu gestalten wurde der Inhalt durch CardViews in die drei Teile \grqq Verfügbare Würfel\grqq{}, \grqq Ausgewählte Würfel\grqq{} und \grqq Buttons\grqq{} aufgeteilt. Zum Beginn der Implementierung zeigte sich, dass aufgrund des Umfangs, eine weitere Klasse \textit{DiceHelper} angelegt werden muss. In dieser implementierten wir alle Methoden und Daten die für die Würfel benötigten wurden einschließlich aber nicht ausschließlich Wahrscheinlichkeiten, Würfelarten und Zufallsgenerierung. Hierbei stellt die innere Klasse \textit{DiceSide} eine Würfelseite da, sie hält für jedes Symbol einen Integer-Wert der die Anzahl beschreibt. Für jeden Würfel wurde dann ein Array angelegt welches die entsprechende Anzahl an Seiten in Form der oben genannten Klasse speichert. Insgesamt gibt es sieben verschiedene Würfel und 8 unterschiedliche Symbole. Zusätzlich gibt es eine Klasse \textit{Dice} welche diese Arrays verwendet um so mit einer Zufallsmethode eine Würfelseite zurückgeben zu können.\\
+Auch im DiceController wurden zusätzliche innere Klassen benötigt um den Würfelverlauf korrekt zu speichern und darzustellen. Die Einträge des Verlaufs werden durch \textit{RollHistoryEntry} mittels der Zeit und \textit{DiceSide} repräsentiert. Jedes Würfelsymbol erhält zum Aufruf des Fragmentes eine \textit{onClickListener} welcher sobald der Nutzer auf die jeweilige Grafik tippt, einen Würfel der entsprechenden Kategorie zum \grqq Pool\grqq{} hinzufügt. Die maximale Anzahl pro Typ wird dabei in der Variable \textit{diceMaxCount} festgehalten und beträgt 6, da das Regelwerk nicht mehr erlaubt. Wenn ein Würfel zum Pool hinzugefügt wird so wird in dem Array \textit{diceCount} der entsprechende Wert um 1 erhöht. Im Array befinde sich für jeden Würfeltyp ein Integer welches die Anzahl der momentan zum Pool hinzugefügten speichert. So kann dynamisch ein Element entfernt und hinzugefügt werden. Sollte der Benutzer sich entscheiden zu Würfel wird entsprechend oft die random-Method der Dice Klasse aufgerufen. Da diese ein DiceSide-Object zurückliefert, kann man alle Ergebnisse addieren und so das Gesamtergebnis in einem DiceSide-Object speichern.
 
 \section{Test und Usability}
 
