--- a/Dokumentation/LaTeX Doku/content/quellen.bib
+++ b/Dokumentation/LaTeX Doku/content/quellen.bib
@@ -14,3 +14,10 @@ year = {2013}
     note    = {\url{http://www.baeldung.com/kotlin-data-classes}\\
 Stand: 17.01.2018}
 }
+
+@Book{adventurebook,
+author = {Katrina Ostrander},
+title = {Under a black sun},
+publisher = {Fantasy Flight Games},
+year = {2013}
+}
