--- a/Dokumentation/LaTeX Doku/content/quellen.bib
+++ b/Dokumentation/LaTeX Doku/content/quellen.bib
@@ -21,3 +21,10 @@ title = {Under a black sun},
 publisher = {Fantasy Flight Games},
 year = {2013}
 }
+
+@ARTICLE{gson,
+	author = {Google},
+	title = {A Java serialization/deserialization library to convert Java Objects into JSON and back},
+	year = {2013},
+	note = {\url{https://github.com/google/gson}\\ Stand: 18.01.2018}
+}
