Implementierung SpeciesFragment & Anfang CareerFragment

--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -117,13 +117,19 @@ Zur Umsetzung der Liste haben wir uns für eine \textit{ListView} entschieden, d
 Jede Pflicht hat eine Wahrscheinlichkeit von 8\% durch den Zufall ausgewählt zu werden. Insgesamt hat der Spieler also eine Chance von 96\% nur eine Pflicht bei der zufälligen Bestimmung zu erhalten. Die übrigen 4\% bilden die Wahrscheinlichkeit dafür, dass der Charakter mit zwei Pflichten startet. Diese Warscheinlichkeiten für das Auswählen der Pflichten wurden dem Regelwerk \cite[39]{rulebook} entnommen, das eine Tabelle mit Würfelergebnissen für jede Verpflichtung beinhaltet. Während der Erstellung ist die Zufallsbestimmung der einzige Weg, eine zweite Verpflichtung zu erhalten. Aus diesem Grund musste in der Implementierung darauf geachtet werden, dass das Textfeld der zweiten Pflicht zurückgesetzt wird, wenn eine neue ausgewählt wird. Dabei ist es egal, ob die neue Verpflichtung durch den Spieler oder den Zufall gesetzt wird. Wenn die derzeitige Pflicht dem Spieler nicht gefällt, kann er sie beliebig oft selbst ändern oder durch Drücken des Buttons neu bestimmen. Die Reihenfolge der Aktionen spielt dabei keine Rolle.\\
 
 \subsubsection{SpeciesFragment.kt}
+
+Das SpeciesFragment bietet dem Nutzer eine Liste an, aus welcher ein Element ausgewählt werden muss. Zusätzlich bietet jedes Listenelement eine weitere Schaltfläche an, welche ein Dialogfenster mit zusätzlichen Informationen öffnet. Zu Beginn der Implementierung haben wir uns überlegt wie man die einzelnen Spezies gut darstellen kann ohne den Anwender mit den vielen Informationen zu überfordern. Hier entschieden wir uns dann für die oben genannte Liste, welche jeweils den Namen und eine beschreibenden Satz zu jeder Spezies anzeigt. Sollte der Benutzer sich dann noch weitere Informationen anzeigen lassen wollen so kann er das mit der auf der linken Seite dargestellten Schaltfläche tun. Intern wird jedes Element durch die Klasse \textit{Species} repräsentiert. Diese enthält insgesamt 13 Variablen um jede Eigenschaft gut darstellen zu können. Ein wichtiger Punkt war für uns das speichern der Daten. Hier entschieden wir uns für eine XML-Datei, da Android bereits Funktionen zum Laden und Manipulieren dieser bietet. Wir legten also zusätzlich zum \textit{SpeciesFragment} und der entsprechenden Layout-Datei auch eine \textit{Species.xml} an in welche wir die statischen Daten eingetragen haben. Diese wird dann mittels des \textit{XMLPullParser}'s eingelesen und die entsprechenden Spezies Objekte erstellt. Das Layout des Fragmentes ist entsprechend simpel aufgebaut und enthält lediglich eine \textit{ListView}. Mittels der von uns angelegten Klasse \textit{SpeciesViewAdapter} konnten wir den Inhalt der Listenelemente dann entsprechend setzen. Zuletzt erstellten wir dann eine Methode \textit{createSpeciesInfoDialog} welche ein Spezies Objekt erwartet und aus diesem dann einen entsprechenden Dialog erzeugt welcher mehr Informationen darstellt, da in der Liste lediglich Name und Beschreibung angezeigt werden. Die Liste befindet sich im sogenannten \textit{SINGLE\_CHOICE\_MODE} damit der Nutzer wirklich nur ein Element auswählen kann, dieses wird dann farblich hervorgehoben. Zu diesem Fragment lässt sich abschließend sagen, dass die Implementierung beim ersten Ansatz gut umgesetzt werden konnte. Dies liegt unter anderem an dem einfachen Aufbau und der guten XML-Datei Unterstützung der Android API.
+
 \subsubsection{CareerFragment.kt}
+
+Das CareerFragment biete eine ähnliche Funktionalität wie das oben genannten SpeciesFragment, es ist jedoch aufgrund der gesteigerten Komplexität nicht so unkompliziert zu implementieren wie dieses. 
+
 \subsubsection{SpecializationFragment.kt}
 
 \subsubsection{ExperienceFragment.kt}
 Nachdem der Spieler sich im vorherigen Fragment eine Spezialisierung seines Berufs ausgesucht hat, kann er hier Erfahrungspunkte einsetzen, um bestimmte Fähigkeiten zu erlernen. Dazu wird ihm der Talentbaum seiner Spezialisierung und die einsetzbaren Erfahrungspunkte angezeigt. Wie viele Erfahrungspunkte dem Spieler zum Erlernen neuer Fähigkeiten zur Verfügung stehen, hängt von der zuvor gewählten Spezies ab. Das bedeutet, das beim Öffnen des Fragments einige Voraussetzungen geprüft werden müssen. Sind diese Bedingungen nicht erfüllt, wird dem Nutzer ein Dialog angezeigt, in welchem er über die Änderungen im Fragment informiert wird.\\
 
-Ein möglicher Auslöser für einen solchen Dialog ist das Wechseln der Spezies durch den Spieler. Wird dem Charakter eine neue Spezies zugewiesen, ändert sich dadurch die Menge an Erfahrungspunkten, die der Spieler im \textit{ExperienceFragment} ausgeben kann. Da der Spieler durch die Änderung der Spezies eventuell nicht mehr genügend Erfahrungspunkte hat, um zuvor erlernte Fähigkeiten weiterhin freischalten zu können, muss das Fragment bei einem Wechsel der Spezies zurückgesetzt werden. Ein Zurücksetzen des Fragments wird auch durch die Neuwahl des Berufs oder der Spezialisierung ausgelöst. Ein anderer Beruf sorgt dafür, dass dem Spieler andere Spezialisierungen zur Auswahl stehen. Durch eine neue Spezialiserung können mit den Erfahrungspunkten andere Fähigkeiten als zuvor freigeschaltet werden. Sollte der Nutzer das \textit{ExperienceFragment} aufrufen, ohne eine Spezies, einen Beruf oder eine Spezialisierung festgelegt zu haben, kann er das Fragment nicht nutzen, weil die fehlenden Informationen notwendig für das Verteilen der Erfahrungspunkte und Erlernen von Fähigkeiten benötigt werden. Wenn dieser Fall eintritt, wird ein Dialog geöffnet, der dem Nutzer alle Fragmente auflistet, welche er noch anschließen muss, bevor er das \textit{ExperienceFragment} bearbeiten kann.
+Ein möglicher Auslöser für einen solchen Dialog ist das Wechseln der Spezies durch den Spieler. Wird dem Charakter eine neue Spezies zugewiesen, ändert sich dadurch die Menge an Erfahrungspunkten, die der Spieler im \textit{ExperienceFragment} ausgeben kann. Da der Spieler durch die Änderung der Spezies eventuell nicht mehr genügend Erfahrungspunkte hat, um zuvor erlernte Fähigkeiten weiterhin freischalten zu können, muss das Fragment bei einem Wechsel der Spezies zurückgesetzt werden. Ein Zurücksetzen des Fragments wird auch durch die Neuwahl des Berufs oder der Spezialisierung ausgelöst. Ein anderer Beruf sorgt dafür, dass dem Spieler andere Spezialisierungen zur Auswahl stehen. Durch eine neue Spezialisierung können mit den Erfahrungspunkten andere Fähigkeiten als zuvor freigeschaltet werden. Sollte der Nutzer das \textit{ExperienceFragment} aufrufen, ohne eine Spezies, einen Beruf oder eine Spezialisierung festgelegt zu haben, kann er das Fragment nicht nutzen, weil die fehlenden Informationen notwendig für das Verteilen der Erfahrungspunkte und Erlernen von Fähigkeiten benötigt werden. Wenn dieser Fall eintritt, wird ein Dialog geöffnet, der dem Nutzer alle Fragmente auflistet, welche er noch anschließen muss, bevor er das \textit{ExperienceFragment} bearbeiten kann.
 
 \subsubsection{AttributeFragment.kt}
 
@@ -138,7 +144,7 @@ Zur Umsetzung der Listen mit den drei Oberkategorien nutzen wir eine \textit{Exp
 
 Da die Motivationen in drei Kategorien eingeteilt sind, verlief die Bestimmung der Motivationen per Zufall etwas anders als im \textit{ObligationFragment}. Zunächst wurden anhand einer Tabelle im Regelwerk \cite[94]{rulebook} die Wahrscheinlichkeiten der Oberkategorien entnommen. Die Tabelle gibt für jede der Kategorien eine Wahrscheinlichkeit von 30\% an. Die übrigen 10\% geben die Chance wieder, bei der Erstellung eine zweite Motivation zu bekommen. Tritt dieser Fall ein, müssen zwei Kategorien ausgewürfelt werden. Nachdem eine oder zwei Kategorien bestimmt wurden, aus denen eine Motivation gewählt wird, erfolgt ein erneuter Zufallswurf. Für diese Zufallsbestimmung liegt die Wahrscheinlichkeit für alle Motivationen der jeweiligen Gruppe bei 10\%. Auch in diesem Fragment gilt die Zufallsbestimmung als einzige Möglichkeit, eine zweite Motivation zu erhalten. Beim Klicken auf ein Child Item oder das erneute Drücken des Zufallsbuttons wird das Feld für die zweite Motivation zurückgesetzt.\\
 
-Die \textit{ExpandableListView} war nicht unsere erste Wahl zur Dartstellung der Motivationen. Das ursprüngliche Layout des Fragments bestand aus drei untereinander angeordneten \textit{ListViews}, welche
+Die \textit{ExpandableListView} war nicht unsere erste Wahl zur Darstellung der Motivationen. Das ursprüngliche Layout des Fragments bestand aus drei untereinander angeordneten \textit{ListViews}, welche
 durch \textit{TextViews} mit den Namen der jeweiligen Gruppen voneinander abgegrenzt werden sollten. Damit der Nutzer alle drei \textit{ListViews} durch Scrollen erreichen kann, sollten sie in einer \textit{ScrollView} angeordnet sein. Android lässt es allerdings nicht zu, zwei scrollbare Elemente ineinander zu verschachteln. Also musste die einfache Lösung, die bereits im \textit{ObligationFragment} Verwendung gefunden hat, einer komplexeren Lösung weichen. Unser nächster Ansatz war, die drei \textit{ListViews} in \textit{CardViews} zu verpacken und diese dann untereinander anzuorden. Diese Lösung war auch nicht optimal, da die \textit{ListViews} dann auf eine minimal Größe zusammengeschrumpft sind, sodass der Nutzer keine gute Ansicht der Motivationen hatte. Schließlich wurde die Idee der drei \textit{ListViews} komplett verworfen. Der frühere \textit{BaseAdapter} musste durch einen mit wesentlich höherem Implementierungsaufwand verbundenem \textit{BaseExpandableListAdapter} ersetzt werden und die drei \textit{ListViews} wurden in einer \textit{ExpandableListView} zusammengefasst.
 
 \subsubsection{AppearanceFragment.kt}
@@ -153,8 +159,9 @@ Viel Programmlogik hat dieses Fragment nicht zu bieten, denn es dient lediglich 
 
 \subsection{Würfeltool}
 Das Würfeltool stellt einen abgegrenzten Teil unserer Applikation dar. Es wird durch das Hauptmenü(\textit{MAIN\_NAVIGATION\_DRAWER}) aufgerufen. Wir haben uns auch hier für ein Fragment entschieden, da wir dieses gut in das bestehende System aus \textit{AppBarLayout} und \textit{NavigationView} einbinden konnten. Wir legten zunächst die Klasse \textit{DiceController} an. Diese erbt von Fragment und bildet damit die Hauptkomponente des Würfeltools. Da neben der Hauptansicht zusätzlich noch 2 Dialoge benötigt werden erstellten wir 3 Layout-Dateien(\textit{fragment\_dice.xml}, \textit{dice\_result\_display\_dialog.xml}, \textit{dice\_roll\_history.xml}). Um das Fragment strukturiert zu gestalten wurde der Inhalt durch CardViews in die drei Teile \grqq Verfügbare Würfel\grqq{}, \grqq Ausgewählte Würfel\grqq{} und \grqq Buttons\grqq{} aufgeteilt. Zum Beginn der Implementierung zeigte sich, dass aufgrund des Umfangs, eine weitere Klasse \textit{DiceHelper} angelegt werden muss. In dieser implementierten wir alle Methoden und Daten die für die Würfel benötigten wurden einschließlich aber nicht ausschließlich Wahrscheinlichkeiten, Würfelarten und Zufallsgenerierung. Hierbei stellt die innere Klasse \textit{DiceSide} eine Würfelseite da, sie hält für jedes Symbol einen Integer-Wert der die Anzahl beschreibt. Für jeden Würfel wurde dann ein Array angelegt welches die entsprechende Anzahl an Seiten in Form der oben genannten Klasse speichert. Insgesamt gibt es sieben verschiedene Würfel und 8 unterschiedliche Symbole. Zusätzlich gibt es eine Klasse \textit{Dice} welche diese Arrays verwendet um so mit einer Zufallsmethode eine Würfelseite zurückgeben zu können.\\
-Auch im DiceController wurden zusätzliche innere Klassen benötigt um den Würfelverlauf korrekt zu speichern und darzustellen. Die Einträge des Verlaufs werden durch \textit{RollHistoryEntry} mittels der Zeit und \textit{DiceSide} repräsentiert. Jedes Würfelsymbol erhält zum Aufruf des Fragmentes eine \textit{onClickListener} welcher sobald der Nutzer auf die jeweilige Grafik tippt, einen Würfel der entsprechenden Kategorie zum \grqq Pool\grqq{} hinzufügt. Die maximale Anzahl pro Typ wird dabei in der Variable \textit{diceMaxCount} festgehalten und beträgt 6, da das Regelwerk nicht mehr erlaubt. Wenn ein Würfel zum Pool hinzugefügt wird so wird in dem Array \textit{diceCount} der entsprechende Wert um 1 erhöht. Im Array befinde sich für jeden Würfeltyp ein Integer welches die Anzahl der momentan zum Pool hinzugefügten speichert. So kann dynamisch ein Element entfernt und hinzugefügt werden. Sollte der Benutzer sich entscheiden zu Würfel wird entsprechend oft die random-Method der Dice Klasse aufgerufen. Da diese ein DiceSide-Object zurückliefert, kann man alle Ergebnisse addieren und so das Gesamtergebnis in einem DiceSide-Object speichern. Abschließend werden noch Symbole, welche sich gegenseitig aufheben, gegeneinander gerechnet und alles mit dem aktuellen TimeStamp in die \textit{RollHistory}-ArrayList gespeichert. In dieser werden immer die letzten 5 Ergebnisse gespeichert. Um den Würfelverlauf dauerhaft speichern zu können verwendeten wir \textit{SharedPreferences} und die JSON-Bibliothek Google Gson \cite{gson}. Zunächst wurde das ArrayList-Object in eine JSON-repräsentation umgewandelt und diese dann als String in die Preferences Datei eingetragen. Zum laden des Objektes wird dieser Prozess umgekehrt. Abschließend sei zu sagen das die größte Herausforderung bei der Implementierung das entwickeln einer passenden Datenrepräsentation der Würfel war. Die Wahrscheinlichkeiten uns Symboltabellen entnahmen wir dem \textit{Under a black Sun}-Storybook \cite{adventurebook}.
+Auch im DiceController wurden zusätzliche innere Klassen benötigt um den Würfelverlauf korrekt zu speichern und darzustellen. Die Einträge des Verlaufs werden durch \textit{RollHistoryEntry} mittels der Zeit und \textit{DiceSide} repräsentiert. Jedes Würfelsymbol erhält zum Aufruf des Fragmentes einen \textit{onClickListener} welcher sobald der Nutzer auf die jeweilige Grafik tippt, einen Würfel der entsprechenden Kategorie zum \grqq Pool\grqq{} hinzufügt. Die maximale Anzahl pro Typ wird dabei in der Variable \textit{diceMaxCount} festgehalten und beträgt 6, da das Regelwerk nicht mehr erlaubt. Wenn ein Würfel zum Pool hinzugefügt wird so wird in dem Array \textit{diceCount} der entsprechende Wert um 1 erhöht. Im Array befinde sich für jeden Würfeltyp ein Integer welches die Anzahl der momentan zum Pool hinzugefügten speichert. So kann dynamisch ein Element entfernt und hinzugefügt werden. Sollte der Benutzer sich entscheiden zu Würfel wird entsprechend oft die random-Method der Dice Klasse aufgerufen. Da diese ein DiceSide-Object zurückliefert, kann man alle Ergebnisse addieren und so das Gesamtergebnis in einem DiceSide-Object speichern. Abschließend werden noch Symbole, welche sich gegenseitig aufheben, gegeneinander gerechnet und alles mit dem aktuellen TimeStamp in die \textit{RollHistory}-ArrayList gespeichert. In dieser werden immer die letzten 5 Ergebnisse gespeichert. Um den Würfelverlauf dauerhaft speichern zu können verwendeten wir \textit{SharedPreferences} und die JSON-Bibliothek Google Gson \cite{gson}. Zunächst wurde das ArrayList-Object in eine JSON-repräsentation umgewandelt und diese dann als String in die Preferences Datei eingetragen. Zum laden des Objektes wird dieser Prozess umgekehrt. Abschließend sei zu sagen das die größte Herausforderung bei der Implementierung das entwickeln einer passenden Datenrepräsentation der Würfel war. Die Wahrscheinlichkeiten uns Symboltabellen entnahmen wir dem \textit{Under a black Sun}-Storybook \cite{adventurebook}.
 
+\subsection{Import/Export}
 \section{Test und Usability}
 
 \section{Zusammenfassung}
