Implementierung CareerFragment, Git bei Stand der Technik

--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -44,6 +44,10 @@ Gradle ist ein weit verbreitetes Build-Tool, welches automatisiert arbeitet und 
 
 Android Studio ist die offizielle Entwicklungsumgebung für native Androidprogrammierung. Es bietet neben den bekannten IDE Funktionen wie Syntax Highlighting, Autovervollständigung, Instant Run(Es wird nur der veränderte Teil neu kompiliert) und Debugger auch einen Android Emulator, um verschiede Geräte und Android Version zu simulieren. Die IDE basiert auf IntelliJ's Softwareprodukten. Mit der Version 3.0.1 wurde die Entwicklungsumgebung für Kotlin angepasst, dies ist auch die Version welche wir zur Entwicklung unserer App verwendeten. Dabei liefert die neue Version ebenfalls ein Programm, um Java-Code direkt in Kotlin-Code umzuwandeln.  Dem Entwickler wird so der Einstieg in Kotlin erleichtert, das Tool sollte im späteren Verlauf aber nur selten genutzt werden, um eine einheitliche Codequalität zu erreichen.
 
+\subsection{Git}
+
+Git ist eine Software zur Versionsverwaltung. Es findet bereits große Anwendung in der Industrie und ist neben SVN das bekannteste System. Hauptgrund für unsere Entscheidung Git zu nutzen war die bereits über die vergangene Semester gesammelte Erfahrung. Git bietet weiterhin den Vorteil das man getrennt arbeiten kann, da jeder eine lokale Arbeitskopie hat. Für unser Projekt verwendeten wir den Git-Serviceprovider Github, dieser stellt kostenlos ein Repository für uns zu Verfügung.
+
 \subsection{UMLet}
 
 UMLet ist ein kostenloses Open-Source UML Tool mit einer simplen Benutzeroberfläche. Die erstellten Diagramme lassen sich z.B. als pdf, jpg oder png exportieren. Wenn einem die große Auswahl an UML Elementen nicht reicht, kann man eigene erstellen oder importieren. Zum Zeichnen unserer Diagramme haben wir die Version 14.2 genutzt. %\cite{http://www.umlet.com/}
@@ -122,7 +126,7 @@ Das SpeciesFragment bietet dem Nutzer eine Liste an, aus welcher ein Element aus
 
 \subsubsection{CareerFragment.kt}
 
-Das CareerFragment biete eine ähnliche Funktionalität wie das oben genannten SpeciesFragment, es ist jedoch aufgrund der gesteigerten Komplexität nicht so unkompliziert zu implementieren wie dieses. 
+Das CareerFragment biete eine ähnliche Funktionalität wie das oben genannten SpeciesFragment, es ist jedoch aufgrund der gesteigerten Komplexität nicht so unkompliziert zu implementieren. Wegen der größeren Menge an Daten und Abhängigkeiten, welche dargestellt werden müssen, haben wir uns entschieden als Hauptelement der Benutzeroberfläche eine \textit{ExpandableListView} zu verwenden. Sie besteht aus \textit{GROUP\_ITEM}'s welche jeweils beliebig viele \textit{CHILD\_ITEM} haben können. Diese \textit{CHILD\_ITEM}'s werden bei der Auswahl des Gruppenelements \grqq ausgeklappt\grqq{}. Auf diese weise ist es möglich die Abhängigkeiten für den Nutzer gut sichtbar zu modellieren. Sollte der Anwender dann eines der Subelemente auswählen, öffnet sich der entsprechende \textit{Skill Tree} und die Applikation merkt sich welcher Beruf ausgewählt wurde. Da die Daten dieses Fragmentes an die Auswahl der Spezies gebunden ist, wird der Nutzer bei Änderungen oder Inkonsistenzen mittels eines Dialoges benachrichtigt. Durch die vielen Elemente mussten bereits nur für die Liste drei Layout-Dateien angelegt werden. In der \textit{char\_creation\_career.xml} wird lediglich die \textit{ExpandableListView} angelegt, die anderen beiden Dateien sind jeweils für das Gruppen- und Kindelement: \textit{char\_creation\_career\_group\_item.xml} und \textit{char\_creation\_career\_child\_item.xml}. Im eigentlichen Quellcode ähnelt dieses Fragment sehr dem oben genannten, ein möglicher Beruf wird durch die Klasse Career repräsentiert. Sie bietet unter anderem die Variablen für Namen und die entsprechenden Unterklassen welche die Kindelemente darstellen. Die Daten werden wieder mit dem  \textit{XMLPullParser} eingelesen, womit dann die Objekte erstellt werden. Die Daten zu den \textit{Skill Tree}'s werden ebenfalls aus einer XML-Datei geladen. Sollte der Nutzer seine bisherige Auswahl ändern wollen so kann er dies mit einem einfachen Button tun.
 
 \subsubsection{SpecializationFragment.kt}
 
