--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -46,7 +46,7 @@ Android Studio ist die offizielle Entwicklungsumgebung für native Androidprogra
 
 \subsection{Git}
 
-Git ist eine Software zur Versionsverwaltung. Es findet bereits große Anwendung in der Industrie und ist neben SVN das bekannteste System. Hauptgrund für unsere Entscheidung Git zu nutzen war die bereits über die vergangene Semester gesammelte Erfahrung. Git bietet weiterhin den Vorteil das man getrennt arbeiten kann, da jeder eine lokale Arbeitskopie hat. Für unser Projekt verwendeten wir den Git-Serviceprovider Github, dieser stellt kostenlos ein Repository für uns zu Verfügung.
+Git ist eine Software zur Versionsverwaltung. Es findet bereits große Anwendung in der Industrie und ist neben SVN das bekannteste System. Hauptgrund für unsere Entscheidung Git zu nutzen war die bereits über die vergangene Semester gesammelte Erfahrung. Git bietet weiterhin den Vorteil das man getrennt arbeiten kann, da jeder eine lokale Arbeitskopie hat. Für unser Projekt verwendeten wir den Git-Serviceprovider Github, dieser stellt kostenloses ein Repository für uns zu Verfügung.
 
 \subsection{UMLet}
 
@@ -169,3 +169,7 @@ Auch im DiceController wurden zusätzliche innere Klassen benötigt um den Würf
 \section{Test und Usability}
 
 \section{Zusammenfassung}
+\subsection{Fazit}
+\subsubsection{Christopher Kluck}
+\subsubsection{Philipp Clausing}
+\subsection{Entwicklungspotenzial}
